docs(package.json): change meta

--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
-      name="react todo app + chakra ui"
+      name="react pokemon app + chakra ui"
       content="Web site created using create-react-app"
     />
     <link rel="shortcut icon" type="image/png/ico" href="favicon.png" />
@@ -18,7 +18,7 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700;800;900&display=swap"
       rel="stylesheet"
     />
-    <title>To-do list by terrnit</title>
+    <title>Poke App by terrnit</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
